cluster/apps/networking/traefik/config/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-public
  annotations:
    io.cilium/lb-ipam-ips: ${SVC_TRAEFIK_ADDR}
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/instance: traefik-public-networking
    app.kubernetes.io/name: traefik
  ports:
    - name: http
      port: 80
      targetPort: 8000
    - name: https
      port: 443
      targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-private
  annotations:
    io.cilium/lb-ipam-ips: ${SVC_TRAEFIK_PRIVATE_ADDR}
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/instance: traefik-private-networking
    app.kubernetes.io/name: traefik
  ports:
    - name: http
      port: 80
      targetPort: 9080
    - name: https
      port: 443
      targetPort: 9443
