cluster/apps/networking/traefik/config/gateways.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  annotations:
    external-dns.kubernetes.io/target: ${INGRESS_DIRECT}
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN/./-}-tls
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
spec:
  gatewayClassName: traefik
  listeners:
    - name: web-intra
      protocol: HTTP
      port: 9080
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure-intra
      protocol: HTTPS
      port: 9443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN/./-}-tls
      allowedRoutes:
        namespaces:
          from: All
