cluster/apps/networking/traefik/config/canary-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-public
  annotations:
    external-dns.kubernetes.io/enabled: 'true'
    external-dns.kubernetes.io/cloudflare-proxied: 'false'
spec:
  parentRefs:
    - name: public
      namespace: networking
      sectionName: websecure-public
  hostnames:
    - echo-gateway.${SECRET_PUBLIC_DOMAIN}
  rules:
    - backendRefs:
        - name: echo-server
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-private
spec:
  parentRefs:
    - name: private
      namespace: networking
      sectionName: websecure-private
  hostnames:
    - echo-gateway.${SECRET_PRIVATE_DOMAIN}
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: echo-cors
      backendRefs:
        - name: echo-server
          port: 8080
